feat: add basic menu

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,3 @@
-* {
-    font-family: "Geologica", serif;
-    font-optical-sizing: auto;
+:root {
+    --bs-body-font-family: "Geologica", sans-serif;
 }
