--- a/src/app/ekg-sim/index.html
+++ b/src/app/ekg-sim/index.html
@@ -4,6 +4,6 @@
         <insert-template-head />
     </head>
     <body>
-        <insert-content-home />
+        <insert-content-ekg-sim />
     </body>
 </html>
