--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -22,6 +22,12 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
 />
+<link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+/>
 <link rel="stylesheet" href="/assets/css/main.css" />
 <title>Medlunch</title>
 <script defer src="/__/firebase/11.1.0/firebase-app-compat.js"></script>
