--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -4,7 +4,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
 />
-<meta name="description" content="Nourish Your Minds, One Game at a Time!" />
+<meta name="description" content="nourish your minds, one game at a time!" />
 <meta name="mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-title" content="Medlunch" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
