--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,3 +1,18 @@
 :root {
     --bs-body-font-family: "Geologica", sans-serif;
 }
+
+.start-animation-rise {
+    animation: 500ms ease animation-rise;
+}
+
+@keyframes animation-rise {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: none;
+    }
+}
