--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -21,10 +21,10 @@ body {
 }
 
 .main-wrapper {
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
 
     width: 100vw;
     height: 100dvh;
@@ -56,7 +56,7 @@ body {
 }
 
 .main-stage.hidden {
-    display: none;
+    visibility: hidden;
 }
 
 #stage-login {
